k8s/api-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: employee-api-deployment
spec:
  replicas: 4
  strategy:
    type: RollingUpdate 
  selector:
    matchLabels:
      app: employee-api
  template:
    metadata:
      labels:
        app: employee-api
    spec:
      containers:
        - name: employee-api
          image: gsinghal08/my-nagp-api:v1
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "128Mi"
              cpu: "100m"
