k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: employee-api-ingress
spec:
  defaultBackend:
    service:
      name: employee-api-service
      port:
        number: 80
